1.4.10.dev0
 *

1.4.9
 * #228: Database dump hooks for MySQL/MariaDB, so you can easily dump your databases before backups
   run.
 * #243: Fix repository does not exist error with "borgmatic extract" when repository is remote.

1.4.8
 * Monitor backups with Cronhub hook integration. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#cronhub-hook
 * Fix Healthchecks/Cronitor hooks to skip actions when the borgmatic "--dry-run" flag is used.

1.4.7
 * #238: In documentation, clarify when Healthchecks/Cronitor hooks fire in relation to other hooks.
 * #239: Upgrade your borgmatic configuration to get new options and comments via
   "generate-borgmatic-config --source". See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/upgrade/#upgrading-your-configuration

1.4.6
 * Verbosity level "-1" for even quieter output: Errors only (#236).

1.4.5
 * Log to file instead of syslog via command-line "--log-file" flag (#233).

1.4.4
 * #234: Support for Borg --keep-exclude-tags and --exclude-nodump options.

1.4.3
 * Monitor backups with Cronitor hook integration. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#cronitor-hook

1.4.2
 * Extract files to a particular directory via "borgmatic extract --destination" flag.
 * Rename "borgmatic extract --restore-path" flag to "--path" to reduce confusion with the separate
   "borgmatic restore" action. Any uses of "--restore-path" will continue working.

1.4.1
 * #229: Restore backed up PostgreSQL databases via "borgmatic restore" action. See the
   documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/backup-your-databases/
 * Documentation on how to develop borgmatic's documentation:
   https://torsion.org/borgmatic/docs/how-to/develop-on-borgmatic/#documentation-development

1.4.0